# esp32-sysmon-server

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: linux.yml  release.yml  windows.yml
src/: main.rs
src/common/: logs.rs  mod.rs
src/linux/: args.rs
src/metrics/: cpu_ram.rs  gpu.rs  mod.rs
src/tray/: windows.rs
src/usb/: mod.rs  send.rs  serialize.rs
src/windows/: mod.rs  tray.rs
