[package]
name = "esp32-sysmon-server"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = "0.38.4"
systemstat = "0.2.6"
all-smi = "0.17.3"
serialport = "4.8.1"
postcard = {version = "1.1.3", features = ["alloc"] }
serde ={ version = "1.0.188", features = ["derive"] }
simplelog ="0.12.2"
directories="6.0.0"
log="0.4.29"

[target.'cfg(target_os = "windows")'.dependencies]                                   
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging"] }
tray-icon = "0.21.3"
image = "0.25.10"